Google maps integration
Added map activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_activity_main">Main panel</string>
     <string name="title_activity_profile">Edit profile</string>
     <string name="title_activity_login">Log or sign in</string>
+    <string name="title_activity_map">Choose your point</string>
 </resources>
