--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="prompt_password">Password</string>
+    <string name="prompt_password_rep">Repeat Password</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_register">Register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -20,4 +22,6 @@
     <string name="title_location_permission">Permission request.</string>
     <string name="text_location_permission">The application may require your permission to access location.</string>
     <string name="ok">OK</string>
+    <string name="title_activity_register">Register</string>
+    <string name="create_new_account">Create new</string>
 </resources>
