--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="ok">OK</string>
     <string name="create_new_account">Create new</string>
     <string name="title_activity_register">Register</string>
+    <string name="title_activity_chat">ChatActivity</string>
 </resources>
